fix: trying to remove hover effects on mobile

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -46,10 +46,6 @@
         @apply w-[1px] lg:w-[2px] h-3 sm:h-6 dark:bg-white bg-black
     }
 
-    .download-resume-btn {
-        @apply transition-all duration-[150ms] fixed z-[100] bottom-0 right-0 m-6 md:m-8 xl:m-16 w-10 h-10 md:w-14 md:h-14 xl:w-[4.5rem] xl:h-[4.5rem] flex items-center justify-center rounded-full bg-light-btn-p dark:bg-dark-btn-p hover:ring-2 ring-accent-p shadow-[0_0_16px_0px_rgba(0,0,0,0.13)] dark:shadow-[0_0_36px_-3px_rgb(0,0,0)]
-    }
-
     .no-scrollbar::-webkit-scrollbar {
         display: none;
     }
